loris@cersloundgroup.org, or visit them at
http://www.cerlsoundgroup.org/Loris

Please send bug reports to loris@cerlsoundgroup.org

Loris is free software. Please see the file COPYING for details.

Loris is Copyright (c) 1999-2010 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by release number:

-------------------------------------------------------
changes since 1.6 release:

- Improved behavior of cropping in Python and procedural interfaces
such that Partials left empty after cropping are removed from the
PartialList. 

- Corrected a logic error in Cropper that caused Breakpoints to be 
introduced into Partials that should be left empty by cropping (no 
Breakpoints in the cropping range).

- Added support for resampling according to a timing envelope
to the Resampler class. This allows time reversal and scrubbing 
effects, in addition to straightforware time dilation.

- Fixed a header inclusion error that prevented building with some
compilers.

-------------------------------------------------------
changes since 1.5.4 release:

- Corrected several sources of significant phase errors in 
synthesis, and in phase reporting from analysis data.

- Improved the Resampler implementation of Breakpoint time
quantization (previously called "sparse resampling"), no longer
adding extra Breakpoints unpredictably to lessen differences 
between the original and resampled envelopes. 

- Added capability to perform logarithmic frequency morphing --
log or linear morphing can be selected independently for both 
amplitude/bandwidth and frequency envelopes. (This might be 
especially useful if you are morphing two different pitches to
obtain a third pitch.)

- Cleaned up Filter interface and implementation, made it more
consistent with other common tools (like Matlab and scipy). 

- Added a Parameters struct to the Synthesizer class that can
be used to specify a full configuration of the Synthesizer. 
